--- a/index.html
+++ b/index.html
@@ -1,15 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Link</title>
+    <title>CSS Learning - Home</title>
+    <style>
+        body { font-family: Arial, sans-serif; margin: 50px; }
+        .menu { background: #f5f5f5; padding: 20px; border-radius: 10px; }
+        a { display: block; padding: 10px; margin: 5px 0; background: #007acc; 
+            color: white; text-decoration: none; border-radius: 5px; }
+        a:hover { background: #005a9e; }
+    </style>
 </head>
 <body>
-    <h1>Link to Internal CSS</h1>
-    <a href="Internal.html">Click to go to Internal CSS</a>
-    <br>
-    <h1>Link to External CSS</h1>
-    <a href="eksternal.html">Click to go to External CSS</a>
+    <h1>📚 Learning CSS</h1>
+    <div class="menu">
+        <h2>Pilih Contoh CSS:</h2>
+        <a href="internal.html">🎨 CSS Internal</a>
+        <a href="eksternal.html">📁 CSS Eksternal</a>
+        <a href="style.css">🎨 Lihat File CSS</a>
+    </div>
 </body>
 </html>
